# Stockerl

./: .gitignore  README.md  pyproject.toml
src/: environment.py  evaluate.py  main.py  metrics.py  sharpe_ratio.py  train.py
src/data/: market_data.py
